--- a/rmf-deployment/charts/rmf-core-modules/templates/config/building-configmap.yaml
+++ b/rmf-deployment/charts/rmf-core-modules/templates/config/building-configmap.yaml
@@ -1,190 +1,8 @@
 ---
 apiVersion: v1
-data:
-  galen.building.yaml: |
-    coordinate_system: reference_image
-    crowd_sim:
-      agent_groups:
-        - {agents_name: [missybot, neuronbot2], agents_number: 2, group_id: 0, profile_selector: external_agent, state_selector: external_static, x: 0, y: 0}
-      agent_profiles:
-        - {ORCA_tau: 1, ORCA_tauObst: 0.4, class: 1, max_accel: 0, max_angle_vel: 0, max_neighbors: 10, max_speed: 0, name: external_agent, neighbor_dist: 5, obstacle_set: 1, pref_speed: 0, r: 0.25}
-      enable: 0
-      goal_sets: []
-      model_types: []
-      obstacle_set: {class: 1, file_name: L1_navmesh.nav, type: nav_mesh}
-      states:
-        - {final: 1, goal_set: -1, name: external_static, navmesh_file_name: ""}
-      transitions: []
-      update_time_step: 0.1
-    graphs:
-      {}
-    levels:
-      L1:
-        constraints:
-          - {ids: ["{35b4c57e-3767-4b38-9327-518183745ad5}", "{fb89a013-6630-474f-87f8-ce1a9fdce25d}"]}
-          - {ids: ["{cc201a6f-ec41-4b01-8f74-9717f2eac8bc}", "{738494cd-e20d-4f3a-b794-7ba2b5da729c}"]}
-          - {ids: ["{4bf87fc6-9c61-4127-8523-125132a43574}", "{6bd9713a-0a1e-4432-ac65-6bf3aa0fb82a}"]}
-        drawing:
-          filename: pics/lvl1/lvl1_floorplan.png
-        elevation: 0
-        features:
-          - {id: "{cc201a6f-ec41-4b01-8f74-9717f2eac8bc}", name: "", x: 183.725, y: 248.602}
-          - {id: "{35b4c57e-3767-4b38-9327-518183745ad5}", name: "", x: 183.368, y: 114.487}
-          - {id: "{4bf87fc6-9c61-4127-8523-125132a43574}", name: "", x: 183.697, y: 312.801}
-        fiducials:
-          - [183.636, 114.659, fid2]
-          - [183.399, 249.167, fid3]
-          - [182.964, 313.012, fid4]
-          - [104.537, 248.244, fid1]
-        lanes:
-          - [1, 0, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [7, 8, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [9, 11, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [11, 7, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [10, 12, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [12, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [7, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [1, 12, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [12, 10, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [1, 7, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [1, 7, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [7, 11, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [11, 9, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [7, 13, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [13, 14, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [14, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-        layers:
-          lvl1_carto:
-            color: [1, 0, 0, 0.5]
-            features:
-              - {id: "{fb89a013-6630-474f-87f8-ce1a9fdce25d}", name: "", x: 363.676, y: 303.609}
-              - {id: "{738494cd-e20d-4f3a-b794-7ba2b5da729c}", name: "", x: 578.323, y: 234.165}
-              - {id: "{6bd9713a-0a1e-4432-ac65-6bf3aa0fb82a}", name: "", x: 681.0549999999999, y: 198.581}
-            filename: pics/map2_lvl1_carto.png
-            transform:
-              scale: 0.05008280552743784
-              translation_x: 35.6169634841546
-              translation_y: -2.903405799807151
-              yaw: -1.88754729087724
-            visible: true
-        measurements:
-          - [3, 4, {distance: [3, 6.6]}]
-          - [4, 5, {distance: [3, 6.6]}]
-          - [3, 6, {distance: [3, 5.4]}]
-        vertices:
-          - [126.672, 128.416, 0, m_start, {is_charger: [4, true], is_parking_spot: [4, true]}]
-          - [127.38, 100.442, 0, ""]
-          - [10612.988, 5955.442, 0, ""]
-          - [184.989, 312.975, 0, ""]
-          - [263.367, 313.465, 0, ""]
-          - [341.746, 313.955, 0, ""]
-          - [184.499, 249.293, 0, ""]
-          - [125.865, 65.863, 0, ""]
-          - [128.366, 48.207, 0, n_start, {is_charger: [4, true]}]
-          - [91.916, 67.279, 0, "", {lift_cabin: [1, B]}]
-          - [91.916, 101.41, 0, "", {lift_cabin: [1, A]}]
-          - [111.295, 66.70399999999999, 0, ""]
-          - [109.633, 101.588, 0, ""]
-          - [145.779, 71.398, 0, ""]
-          - [146.405, 95.82299999999999, 0, ""]
-      L5:
-        drawing:
-          filename: pics/lvl5/lvl5_floorplan.png
-        elevation: 9
-        fiducials:
-          - [1149.594, 374.54, fid1]
-          - [1258.451, 184.295, fid2]
-          - [1256.925, 375.558, fid3]
-          - [1259.977, 464.067, fid4]
-        lanes:
-          - [7, 8, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [8, 9, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [9, 3, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [12, 11, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [3, 15, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [15, 2, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [13, 16, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [14, 17, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [17, 0, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [0, 18, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [16, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [1, 10, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [1, 0, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [0, 17, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [17, 14, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [13, 16, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [16, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-          - [1, 0, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-        layers:
-          {}
-        vertices:
-          - [1178, 169.531, 0, ""]
-          - [1178.361, 122.46, 0, n_lift]
-          - [1176, 418, 0, m_wait]
-          - [688.468, 418, 0, m_start, {is_charger: [4, true], is_parking_spot: [4, true]}]
-          - [704.499, 190.922, 0, ""]
-          - [705.067, 398.354, 0, ""]
-          - [1195.605, 397.292, 0, ""]
-          - [659.936, 234.33, 0, w1, {spawn_robot_name: [1, missybot], spawn_robot_type: [1, missy]}]
-          - [673.9059999999999, 273.162, 0, ""]
-          - [652.122, 303.47, 0, w2]
-          - [1185.24, 85.023, 0, n_end, {is_charger: [4, true], is_parking_spot: [4, true]}]
-          - [641.401, 255.599, 0, w3, {spawn_robot_name: [1, neuronbot2], spawn_robot_type: [1, neuronbot]}]
-          - [700.55, 254.993, 0, w4, {is_charger: [4, true], is_parking_spot: [4, true]}]
-          - [1130.955, 120.308, 0, "", {lift_cabin: [1, B]}]
-          - [1130.955, 168.033, 0, "", {lift_cabin: [1, A]}]
-          - [930.877, 418, 0, m_mid]
-          - [1158.539, 120.945, 0, ""]
-          - [1153.909, 168.563, 0, ""]
-          - [1176.789, 204.787, 0, m_end]
-    lifts:
-      A:
-        depth: 1
-        doors:
-          d2:
-            door_type: 2
-            motion_axis_orientation: 1.57
-            width: 1
-            x: 0.5
-            y: 0
-        highest_floor: L5
-        initial_floor_name: L1
-        level_doors:
-          L1: [d2]
-          L5: [d2]
-        lowest_floor: L1
-        plugins: true
-        reference_floor_name: L1
-        width: 1
-        x: 91.916
-        y: 101.41
-        yaw: 0
-      B:
-        depth: 1
-        doors:
-          d:
-            door_type: 2
-            motion_axis_orientation: 1.57
-            width: 1
-            x: 0.5
-            y: 0
-        highest_floor: L5
-        initial_floor_name: L1
-        level_doors:
-          L1: [d]
-          L5: [d]
-        lowest_floor: L1
-        plugins: true
-        reference_floor_name: L1
-        width: 1
-        x: 91.916
-        y: 67.279
-        yaw: 0
-    name: galen
 kind: ConfigMap
 metadata:
-  creationTimestamp: "2022-08-31T04:09:33Z"
   name: building-configmap
-  namespace: default
-  resourceVersion: "191298"
-  uid: 0e95771f-9dd2-4f1b-9588-220cf15bebce
+data:
+  {{.Values.global.RMF_BUILDING_MAP}}: |-
+{{ .Files.Get "galen.building.yaml" | indent 4}}
