--- a/rmf-deployment/charts/rmf-core-modules/values.yaml
+++ b/rmf-deployment/charts/rmf-core-modules/values.yaml
@@ -19,6 +19,7 @@ global:
   RMF_BIDDING_TIME_WINDOW: "2.0"
   RMF_TRAJECTORY_VISUALIZER_LEVEL_NAME: "L1"
   RMF_BUILDING_MAP_SERVER_CONFIG_PATH: "/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/office/galen.building.yaml"
+  RMF_BUILDING_MAP: "galen.building.yaml"
   RMF_FAILOVER_MODE: "false"
   RMF_SERVER_URI: "ws://localhost:8001"
 
@@ -27,3 +28,79 @@ simulation:
   RMF_SIMULATION_MAP_NAME: "airport_terminal"
   RMF_SIMULATION_MAP_PACKAGE: "rmf_demos_maps"
   GAZEBO_VERSION: "11"
+
+# Panasonic hospi
+panasonic:
+  hospi:
+    RMF_FLEET_ADAPTER_CONTROL_TYPE: full_control
+    RMF_FLEET_ADAPTER_FLEET_NAME: hospi_robot
+    RMF_FLEET_ADAPTER_NAV_GRAPH_FILE: /opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/1.yaml
+    RMF_FLEET_ADAPTER_LINEAR_VELOCITY: "0.6"
+    RMF_FLEET_ADAPTER_ANGULAR_VELOCITY: "0.6"
+    RMF_FLEET_ADAPTER_LINEAR_ACCELERATION: "0.75"
+    RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION: "2.0"
+    RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS: "0.3"
+    RMF_FLEET_ADAPTER_VICINITY_RADIUS: "1.0"
+    RMF_FLEET_ADAPTER_DELAY_THRESHOLD: "15.0"
+    RMF_FLEET_ADAPTER_RETRY_WAIT: "10.0"
+    RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT: "60.0"
+    RMF_FLEET_ADAPTER_PERFORM_DELIVERIES: true
+    RMF_FLEET_ADAPTER_PERFORM_LOOP: true
+    RMF_FLEET_ADAPTER_PERFORM_CLEANING: true
+    RMF_FLEET_ADAPTER_BATTERY_VOLTAGE: "12.0"
+    RMF_FLEET_ADAPTER_BATTERY_CAPACITY: "24.0"
+    RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT: "5.0"
+    RMF_FLEET_ADAPTER_MASS: "20.0"
+    RMF_FLEET_ADAPTER_INERTIA: "10.0"
+    RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT: "0.22"
+    RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN: "20.0"
+    RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN: "0.0"
+    RMF_FLEET_ADAPTER_DRAIN_BATTERY: false
+    RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD: "0.1"
+    RMF_FLEET_ADAPTER_SERVER_URI: ws://localhost:8001
+
+    # Free Fleet Server TRANSFORMATION
+    RMF_FREE_FLEET_SERVER_TRANSLATION_X: -9.99
+    RMF_FREE_FLEET_SERVER_TRANSLATION_Y: 5.41
+    RMF_FREE_FLEET_SERVER_ROTATION: -0.002
+    RMF_FREE_FLEET_SERVER_SCALE: 0.97
+    RMF_FREE_FLEET_SERVER_FLEET_NAME: hospi_robot
+    RMF_FREE_FLEET_SERVER_DDS_DOMAIN: 50
+
+  wheelchair:
+    RMF_FLEET_ADAPTER_CONTROL_TYPE: full_control
+    RMF_FLEET_ADAPTER_FLEET_NAME: magni
+    RMF_FLEET_ADAPTER_NAV_GRAPH_FILE: /opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/1.yaml
+    RMF_FLEET_ADAPTER_LINEAR_VELOCITY: 0.6
+    RMF_FLEET_ADAPTER_ANGULAR_VELOCITY: 0.6
+    RMF_FLEET_ADAPTER_LINEAR_ACCELERATION: 0.75
+    RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION: 2.0
+    RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS: 0.3
+    RMF_FLEET_ADAPTER_VICINITY_RADIUS: 1.0
+    RMF_FLEET_ADAPTER_DELAY_THRESHOLD: 15.0
+    RMF_FLEET_ADAPTER_RETRY_WAIT: 10.0
+    RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT: 60.0
+    RMF_FLEET_ADAPTER_PERFORM_DELIVERIES: true
+    RMF_FLEET_ADAPTER_PERFORM_LOOP: true
+    RMF_FLEET_ADAPTER_PERFORM_CLEANING: true
+    RMF_FLEET_ADAPTER_BATTERY_VOLTAGE: 12.0
+    RMF_FLEET_ADAPTER_BATTERY_CAPACITY: 24.0
+    RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT: 5.0
+    RMF_FLEET_ADAPTER_MASS: 20.0
+    RMF_FLEET_ADAPTER_INERTIA: 10.0
+    RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT: 0.22
+    RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN: 20.0
+    RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN: 0.0
+    RMF_FLEET_ADAPTER_DRAIN_BATTERY: false
+    RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD: 0.1
+    RMF_FLEET_ADAPTER_SERVER_URI: ws://localhost:8001
+
+    # TRANSFORMATION
+    RMF_FREE_FLEET_SERVER_TRANSLATION_X: 9.0627
+    RMF_FREE_FLEET_SERVER_TRANSLATION_Y: 10.3576
+    RMF_FREE_FLEET_SERVER_ROTATION: -1.5034
+    RMF_FREE_FLEET_SERVER_SCALE: 0.9937
+
+    # Free Fleet Server
+    RMF_FREE_FLEET_SERVER_FLEET_NAME: magni
+    RMF_FREE_FLEET_SERVER_DDS_DOMAIN: 1
