Tested to be working with Medisys's MiR, and Panasonic's Hospi

--- a/rmf-deployment/charts/rmf-core-modules/values.yaml
+++ b/rmf-deployment/charts/rmf-core-modules/values.yaml
@@ -14,12 +14,14 @@ global:
   BUILDING_CONFIG_VOLUME: building-configmap
   BUILDING_CONFIG_FILE_MOUNTPATH: /opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/office
   BUILDING_PICS_CONFIG_FILE_MOUNTPATH: /opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/office/pics
+  # RMF_BUILDING_MAP_SERVER_CONFIG_PATH: "/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/office/galen.building.yaml"
+  # RMF_BUILDING_MAP: "galen.building.yaml"
+  RMF_BUILDING_MAP: "medinno.building.yaml"
+  RMF_BUILDING_MAP_SERVER_CONFIG_PATH: "/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/office/medinno.building.yaml"
 
   RMF_USE_SIM_TIME: "false"
   RMF_BIDDING_TIME_WINDOW: "2.0"
   RMF_TRAJECTORY_VISUALIZER_LEVEL_NAME: "L1"
-  RMF_BUILDING_MAP_SERVER_CONFIG_PATH: "/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/office/galen.building.yaml"
-  RMF_BUILDING_MAP: "galen.building.yaml"
   RMF_FAILOVER_MODE: "false"
   RMF_SERVER_URI: "ws://localhost:8001"
 
@@ -29,36 +31,46 @@ simulation:
   RMF_SIMULATION_MAP_PACKAGE: "rmf_demos_maps"
   GAZEBO_VERSION: "11"
 
+kone:
+  KONE_ENV: env.yaml # File name
+  KONE_ENV_MOUNT: /opt/rmf/install/kone_ros_api/share/kone_ros_api/config # File mount path
+
+dorma:
+  DORMA_ENV: config.yaml # File name
+  DORMA_CONFIG_FILE: /opt/rmf/install/door_adapter_dormakaba/share/door_adapter_dormakaba/config/config.yaml 
+  DORMA_ENV_MOUNT: /opt/rmf/install/door_adapter_dormakaba/share/door_adapter_dormakaba/config  # File mount path
+
 # Panasonic hospi
 panasonic:
-  hospi:
-    RMF_FLEET_ADAPTER_CONTROL_TYPE: full_control
-    RMF_FLEET_ADAPTER_FLEET_NAME: hospi_robot
-    RMF_FLEET_ADAPTER_NAV_GRAPH_FILE: /opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/1.yaml
-    RMF_FLEET_ADAPTER_LINEAR_VELOCITY: "0.6"
-    RMF_FLEET_ADAPTER_ANGULAR_VELOCITY: "0.6"
-    RMF_FLEET_ADAPTER_LINEAR_ACCELERATION: "0.75"
-    RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION: "2.0"
-    RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS: "0.3"
-    RMF_FLEET_ADAPTER_VICINITY_RADIUS: "1.0"
-    RMF_FLEET_ADAPTER_DELAY_THRESHOLD: "15.0"
-    RMF_FLEET_ADAPTER_RETRY_WAIT: "10.0"
-    RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT: "60.0"
-    RMF_FLEET_ADAPTER_PERFORM_DELIVERIES: true
-    RMF_FLEET_ADAPTER_PERFORM_LOOP: true
-    RMF_FLEET_ADAPTER_PERFORM_CLEANING: true
-    RMF_FLEET_ADAPTER_BATTERY_VOLTAGE: "12.0"
-    RMF_FLEET_ADAPTER_BATTERY_CAPACITY: "24.0"
-    RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT: "5.0"
-    RMF_FLEET_ADAPTER_MASS: "20.0"
-    RMF_FLEET_ADAPTER_INERTIA: "10.0"
-    RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT: "0.22"
-    RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN: "20.0"
-    RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN: "0.0"
-    RMF_FLEET_ADAPTER_DRAIN_BATTERY: false
-    RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD: "0.1"
-    RMF_FLEET_ADAPTER_SERVER_URI: ws://localhost:8001
+  RMF_FLEET_ADAPTER_CONTROL_TYPE: full_control
+  RMF_FLEET_ADAPTER_FLEET_NAME: hospi_robot
+  RMF_FLEET_ADAPTER_NAV_GRAPH_FILE: /opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/1.yaml
+  RMF_FLEET_ADAPTER_LINEAR_VELOCITY: "0.6"
+  RMF_FLEET_ADAPTER_ANGULAR_VELOCITY: "0.6"
+  RMF_FLEET_ADAPTER_LINEAR_ACCELERATION: "0.75"
+  RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION: "2.0"
+  RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS: "0.3"
+  RMF_FLEET_ADAPTER_VICINITY_RADIUS: "1.0"
+  RMF_FLEET_ADAPTER_DELAY_THRESHOLD: "15.0"
+  RMF_FLEET_ADAPTER_RETRY_WAIT: "10.0"
+  RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT: "60.0"
+  RMF_FLEET_ADAPTER_PERFORM_DELIVERIES: true
+  RMF_FLEET_ADAPTER_PERFORM_LOOP: true
+  RMF_FLEET_ADAPTER_PERFORM_CLEANING: true
+  RMF_FLEET_ADAPTER_BATTERY_VOLTAGE: "12.0"
+  RMF_FLEET_ADAPTER_BATTERY_CAPACITY: "24.0"
+  RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT: "5.0"
+  RMF_FLEET_ADAPTER_MASS: "20.0"
+  RMF_FLEET_ADAPTER_INERTIA: "10.0"
+  RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT: "0.22"
+  RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN: "20.0"
+  RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN: "0.0"
+  RMF_FLEET_ADAPTER_DRAIN_BATTERY: false
+  RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD: "0.1"
+  RMF_FLEET_ADAPTER_SERVER_URI: ws://localhost:8001
+  RMF_FLEET_ADAPTER_REVERSIBLE: false
 
+  hospi:
     # Free Fleet Server TRANSFORMATION
     RMF_FREE_FLEET_SERVER_TRANSLATION_X: -9.99
     RMF_FREE_FLEET_SERVER_TRANSLATION_Y: 5.41
@@ -66,41 +78,109 @@ panasonic:
     RMF_FREE_FLEET_SERVER_SCALE: 0.97
     RMF_FREE_FLEET_SERVER_FLEET_NAME: hospi_robot
     RMF_FREE_FLEET_SERVER_DDS_DOMAIN: 50
+    node_name: hospi
 
   wheelchair:
-    RMF_FLEET_ADAPTER_CONTROL_TYPE: full_control
-    RMF_FLEET_ADAPTER_FLEET_NAME: magni
-    RMF_FLEET_ADAPTER_NAV_GRAPH_FILE: /opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/1.yaml
-    RMF_FLEET_ADAPTER_LINEAR_VELOCITY: 0.6
-    RMF_FLEET_ADAPTER_ANGULAR_VELOCITY: 0.6
-    RMF_FLEET_ADAPTER_LINEAR_ACCELERATION: 0.75
-    RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION: 2.0
-    RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS: 0.3
-    RMF_FLEET_ADAPTER_VICINITY_RADIUS: 1.0
-    RMF_FLEET_ADAPTER_DELAY_THRESHOLD: 15.0
-    RMF_FLEET_ADAPTER_RETRY_WAIT: 10.0
-    RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT: 60.0
-    RMF_FLEET_ADAPTER_PERFORM_DELIVERIES: true
-    RMF_FLEET_ADAPTER_PERFORM_LOOP: true
-    RMF_FLEET_ADAPTER_PERFORM_CLEANING: true
-    RMF_FLEET_ADAPTER_BATTERY_VOLTAGE: 12.0
-    RMF_FLEET_ADAPTER_BATTERY_CAPACITY: 24.0
-    RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT: 5.0
-    RMF_FLEET_ADAPTER_MASS: 20.0
-    RMF_FLEET_ADAPTER_INERTIA: 10.0
-    RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT: 0.22
-    RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN: 20.0
-    RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN: 0.0
-    RMF_FLEET_ADAPTER_DRAIN_BATTERY: false
-    RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD: 0.1
-    RMF_FLEET_ADAPTER_SERVER_URI: ws://localhost:8001
+    # Free Fleet Server TRANSFORMATION
+    RMF_FREE_FLEET_SERVER_TRANSLATION_X: -9.99
+    RMF_FREE_FLEET_SERVER_TRANSLATION_Y: 5.41
+    RMF_FREE_FLEET_SERVER_ROTATION: -0.002
+    RMF_FREE_FLEET_SERVER_SCALE: 0.97
+    RMF_FREE_FLEET_SERVER_FLEET_NAME: hospi_robot
+    RMF_FREE_FLEET_SERVER_DDS_DOMAIN: 45
+    node_name: wheelchair
 
-    # TRANSFORMATION
-    RMF_FREE_FLEET_SERVER_TRANSLATION_X: 9.0627
-    RMF_FREE_FLEET_SERVER_TRANSLATION_Y: 10.3576
-    RMF_FREE_FLEET_SERVER_ROTATION: -1.5034
-    RMF_FREE_FLEET_SERVER_SCALE: 0.9937
+# delta
+delta:
+  RMF_FLEET_ADAPTER_CONTROL_TYPE: full_control
+  RMF_FLEET_ADAPTER_FLEET_NAME: delta
+  RMF_FLEET_ADAPTER_NAV_GRAPH_FILE: /opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/4.yaml
+  RMF_FLEET_ADAPTER_LINEAR_VELOCITY: "0.6"
+  RMF_FLEET_ADAPTER_ANGULAR_VELOCITY: "0.6"
+  RMF_FLEET_ADAPTER_LINEAR_ACCELERATION: "0.75"
+  RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION: "2.0"
+  RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS: "0.3"
+  RMF_FLEET_ADAPTER_VICINITY_RADIUS: "1.0"
+  RMF_FLEET_ADAPTER_DELAY_THRESHOLD: "15.0"
+  RMF_FLEET_ADAPTER_RETRY_WAIT: "10.0"
+  RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT: "60.0"
+  RMF_FLEET_ADAPTER_PERFORM_DELIVERIES: true
+  RMF_FLEET_ADAPTER_PERFORM_LOOP: true
+  RMF_FLEET_ADAPTER_PERFORM_CLEANING: true
+  RMF_FLEET_ADAPTER_BATTERY_VOLTAGE: "12.0"
+  RMF_FLEET_ADAPTER_BATTERY_CAPACITY: "24.0"
+  RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT: "5.0"
+  RMF_FLEET_ADAPTER_MASS: "20.0"
+  RMF_FLEET_ADAPTER_INERTIA: "10.0"
+  RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT: "0.22"
+  RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN: "20.0"
+  RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN: "0.0"
+  RMF_FLEET_ADAPTER_DRAIN_BATTERY: false
+  RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD: "0.1"
+  RMF_FLEET_ADAPTER_SERVER_URI: ws://localhost:8001
+  RMF_FLEET_ADAPTER_REVERSIBLE: false
 
-    # Free Fleet Server
-    RMF_FREE_FLEET_SERVER_FLEET_NAME: magni
-    RMF_FREE_FLEET_SERVER_DDS_DOMAIN: 1
+  # Free Fleet Server TRANSFORMATION
+  RMF_FREE_FLEET_SERVER_TRANSLATION_X: -36.210834139267874
+  RMF_FREE_FLEET_SERVER_TRANSLATION_Y: -50.01
+  RMF_FREE_FLEET_SERVER_ROTATION: 1.8815
+  RMF_FREE_FLEET_SERVER_SCALE: 0.993
+  RMF_FREE_FLEET_SERVER_FLEET_NAME: delta
+  RMF_FREE_FLEET_SERVER_DDS_DOMAIN: 33
+  node_name: delta
+
+#kabam
+kabam:
+  RMF_FLEET_ADAPTER_CONTROL_TYPE: full_control
+  RMF_FLEET_ADAPTER_FLEET_NAME: kabam_fleet
+  RMF_FLEET_ADAPTER_NAV_GRAPH_FILE: /opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/5.yaml
+  RMF_FLEET_ADAPTER_LINEAR_VELOCITY: "0.6"
+  RMF_FLEET_ADAPTER_ANGULAR_VELOCITY: "0.6"
+  RMF_FLEET_ADAPTER_LINEAR_ACCELERATION: "0.75"
+  RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION: "2.0"
+  RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS: "0.3"
+  RMF_FLEET_ADAPTER_VICINITY_RADIUS: "1.0"
+  RMF_FLEET_ADAPTER_DELAY_THRESHOLD: "15.0"
+  RMF_FLEET_ADAPTER_RETRY_WAIT: "10.0"
+  RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT: "60.0"
+  RMF_FLEET_ADAPTER_PERFORM_DELIVERIES: true
+  RMF_FLEET_ADAPTER_PERFORM_LOOP: true
+  RMF_FLEET_ADAPTER_PERFORM_CLEANING: true
+  RMF_FLEET_ADAPTER_BATTERY_VOLTAGE: "12.0"
+  RMF_FLEET_ADAPTER_BATTERY_CAPACITY: "24.0"
+  RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT: "5.0"
+  RMF_FLEET_ADAPTER_MASS: "20.0"
+  RMF_FLEET_ADAPTER_INERTIA: "10.0"
+  RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT: "0.22"
+  RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN: "20.0"
+  RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN: "0.0"
+  RMF_FLEET_ADAPTER_DRAIN_BATTERY: false
+  RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD: "0.1"
+  RMF_FLEET_ADAPTER_SERVER_URI: ws://localhost:8001
+  RMF_FLEET_ADAPTER_REVERSIBLE: false
+
+  # Free Fleet Server TRANSFORMATION
+  RMF_FREE_FLEET_SERVER_TRANSLATION_X: -9.99
+  RMF_FREE_FLEET_SERVER_TRANSLATION_Y: 5.41
+  RMF_FREE_FLEET_SERVER_ROTATION: -0.002
+  RMF_FREE_FLEET_SERVER_SCALE: 0.97
+  RMF_FREE_FLEET_SERVER_FLEET_NAME: kabam
+  RMF_FREE_FLEET_SERVER_DDS_DOMAIN: 50
+  node_name: kabam # TODO, make it robot specific
+
+#mir
+mir:
+  RMF_FLEET_ADAPTER_EXEC: fleet_adapter_mircw
+  RMF_FLEET_ADAPTER_CONFIG_FILE: /opt/rmf/install/fleet_adapter_mircw/share/fleet_adapter_mircw/config/config.yaml
+  RMF_FLEET_ADAPTER_NAV_GRAPH_FILE: /opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs/9.yaml
+  RMF_FLEET_ADAPTER_SERVER_URI: ws://localhost:7878
+
+lionsbot:
+  r3:
+    RMF_FLEET_ADAPTER: fleet_adapter_r3
+    RMF_FLEET_ADAPTER_CONFIG_FILE: /opt/rmf/install/fleet_adapter_r3/share/fleet_adapter_r3/config.yaml
+    RMF_FLEET_ADAPTER_NAV_GRAPH_FILE: /opt/rmf/src/lionsbot/fleet_adapter_r3/maps/02office/0.yaml
+  leoscrub:
+    RMF_FLEET_ADAPTER: fleet_adapter_leoscrub
+    RMF_FLEET_ADAPTER_CONFIG_FILE: /opt/rmf/install/fleet_adapter_leoscrub/share/fleet_adapter_leoscrub/config.yaml
+    RMF_FLEET_ADAPTER_NAV_GRAPH_FILE: /opt/rmf/src/lionsbot/fleet_adapter_leoscrub/maps/1.yaml
