--- a/rmf-deployment/.helmignore
+++ b/rmf-deployment/.helmignore
@@ -23,9 +23,6 @@
 .vscode/
 
 # For testing purposes
-building-configmap.yaml
-# nav-graph-configmap.yaml
-# cyclonedds-configmap.yaml
 keycloak-secrets.yaml
 rmf-web-rmf-server-configmap.yaml
 rmf-web-rmf-server-secrets.yaml
@@ -34,18 +31,25 @@ caddy.yaml
 cleanerbota.yaml
 cleanerbote.yaml
 deliveryrobot.yaml
-delta.yaml
-kabam.yaml
-omron.yaml
-# panasonic_hospi.yaml
-panasonic_wheelchair.yaml
 tinyrobot.yaml
 
 keycloak.yaml
-# rmf-core-modules.yaml
-# rmf-web-modules.yaml
 rmf-simulation-modules.yaml
 
-# floorplan-configmap.yaml
 floorplan-configmap-bkup.yaml
 *bkup.*
+
+# delta.yaml
+# kabam.yaml
+# omron.yaml
+# panasonic.yaml
+# mir.yaml
+# lionsbot.yaml
+# cyclonedds-configmap.yaml
+# building-configmap.yaml
+# nav-graph-configmap.yaml
+# floorplan-configmap.yaml
+# dorma-configmap.yaml
+# rmf-core-modules.yaml
+# rmf-web-modules.yaml
+# rmf-site-modules.yaml
