--- a/rmf-deployment/charts/rmf-core-modules/galen.building.yaml
+++ b/rmf-deployment/charts/rmf-core-modules/galen.building.yaml
@@ -35,22 +35,28 @@ levels:
       - [262.571, 248.627, fid5]
       - [224.978, 104.356, fid6]
     lanes:
-      - [1, 0, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
       - [7, 8, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [9, 11, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [11, 7, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [10, 12, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [12, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
       - [7, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [1, 12, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [12, 10, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [1, 7, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [1, 7, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
       - [7, 11, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [11, 9, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
       - [7, 13, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [13, 14, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [14, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [11, 9, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [9, 11, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [10, 12, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [19, 7, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [20, 18, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [7, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [1, 20, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [1, 12, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [12, 10, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [14, 7, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [10, 12, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [12, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [1, 21, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
     layers:
       lvl1_carto:
         color: [1, 0, 0, 0.5]
@@ -79,16 +85,22 @@ levels:
       - [184.499, 249.293, 0, ""]
       - [125.865, 65.863, 0, ""]
       - [128.366, 48.207, 0, n_start, {is_charger: [4, true]}]
-      - [91.916, 67.279, 0, "", {lift_cabin: [1, B]}]
-      - [91.916, 101.41, 0, "", {lift_cabin: [1, A]}]
+      - [86, 67.279, 0, "", {lift_cabin: [1, B]}]
+      - [86, 101.41, 0, "", {lift_cabin: [1, A]}]
       - [111.295, 66.70399999999999, 0, ""]
       - [109.633, 101.588, 0, ""]
-      - [145.779, 71.398, 0, ""]
-      - [146.405, 95.82299999999999, 0, ""]
+      - [143.438, 65.985, 0, ""]
+      - [142.558, 91.49299999999999, 0, m_wait]
       - [224.45, 103.771, 0, ""]
       - [262.606, 248.455, 0, ""]
       - [183.423, 114.504, 0, ""]
+      - [126.631, 167.401, 0, mir_start, {is_charger: [4, true], is_parking_spot: [4, true]}]
+      - [127.93, 34.277, 0, mir_1]
+      - [126.565, 113.744, 0, mir_2]
+      - [126.753, 121.824, 0, kabam_start, {is_charger: [4, true], is_parking_spot: [4, true]}]
   L5:
+    doors:
+      - [29, 30, {motion_axis: [1, start], motion_degrees: [3, 90], motion_direction: [2, 1], name: [1, dormakaba_door1], plugin: [1, normal], right_left_ratio: [3, 1], type: [1, sliding]}]
     drawing:
       filename: pics/lvl5/lvl5_floorplan.png
     elevation: 9
@@ -101,52 +113,90 @@ levels:
       - [3, 14, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [14, 2, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [12, 15, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [13, 16, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [16, 0, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
       - [0, 17, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
       - [15, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [1, 9, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [1, 0, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [0, 16, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [16, 13, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
       - [12, 15, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
       - [15, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
       - [1, 0, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [6, 20, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [6, 20, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0.3]}]
       - [20, 10, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [20, 8, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [20, 8, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0.3]}]
       - [7, 21, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [21, 3, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [11, 10, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [11, 10, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [11, 10, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0.3]}]
+      - [11, 10, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0.3]}]
       - [10, 20, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [20, 6, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
-      - [20, 8, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [20, 6, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0.3]}]
+      - [20, 8, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0.3]}]
+      - [1, 22, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [22, 23, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [1, 22, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [22, 9, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [25, 26, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [24, 26, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [21, 7, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 4], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [7, 27, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 4], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [7, 28, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 4], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [3, 21, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 0], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [31, 32, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [7, 21, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [21, 3, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [3, 33, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [3, 34, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [33, 14, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [14, 2, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [2, 17, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 1], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [1, 22, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [22, 35, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [13, 16, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [16, 0, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [0, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 3], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [22, 9, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [22, 1, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [1, 0, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [0, 16, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
+      - [16, 13, {bidirectional: [4, true], demo_mock_floor_name: [1, ""], demo_mock_lift_name: [1, ""], graph_idx: [2, 5], orientation: [1, ""], speed_limit: [3, 0]}]
     layers:
       {}
     vertices:
-      - [1178, 169.531, 0, ""]
-      - [1178.361, 122.46, 0, n_lift]
-      - [1176, 418, 0, m_wait]
-      - [688.468, 418, 0, m_start, {is_charger: [4, true], is_parking_spot: [4, true]}]
+      - [1172.385, 168.01, 0, test]
+      - [1171.564, 120.213, 0, n_lift]
+      - [1176, 418, 0, corner]
+      - [688.404, 418.813, 0, door_test, {is_charger: [4, true], is_parking_spot: [4, true]}]
       - [705.067, 398.354, 0, ""]
       - [1195.605, 397.292, 0, ""]
       - [351.056, 245.292, 0, w1, {spawn_robot_name: [1, missybot], spawn_robot_type: [1, missy]}]
-      - [673.9059999999999, 273.162, 0, ""]
+      - [673.9059999999999, 273.162, 0, pana_door_test]
       - [391.175, 307.841, 0, w2]
-      - [1185.24, 85.023, 0, n_end, {is_charger: [4, true], is_parking_spot: [4, true]}]
+      - [1192.37, 39.719, 0, kabam_end, {is_charger: [4, true], is_parking_spot: [4, true]}]
       - [390.004, 238.783, 0, w3, {spawn_robot_name: [1, neuronbot2], spawn_robot_type: [1, neuronbot]}]
       - [439.54, 240.132, 0, w4, {is_charger: [4, true], is_parking_spot: [4, true]}]
-      - [1130.955, 120.308, 0, "", {lift_cabin: [1, B]}]
-      - [1130.955, 168.033, 0, "", {lift_cabin: [1, A]}]
+      - [1122, 120, 0, "", {lift_cabin: [1, B]}]
+      - [1122, 168, 0, "", {lift_cabin: [1, A]}]
       - [930.877, 418, 0, m_mid]
       - [1158.539, 120.945, 0, ""]
       - [1153.909, 168.563, 0, ""]
-      - [1176.789, 204.787, 0, m_end]
+      - [1172.795, 203.499, 0, ""]
       - [1194.808, 85.375, 0, ""]
       - [719.211, 187.442, 0, ""]
       - [389.337, 279.339, 0, ""]
-      - [688.372, 329.638, 0, ""]
+      - [683.763, 329.859, 0, delta_2]
+      - [1171.974, 73.03100000000001, 0, ""]
+      - [1170.488, 34.201, 0, m_end]
+      - [370, 355, 0, L5_01_pick_up, {dock_name: [1, L5_01_pick_up]}]
+      - [370, 355, 0, L5_01_drop_off, {dock_name: [1, L5_01_drop_off]}]
+      - [370.582, 331.463, 0, L5_01_entry]
+      - [671.083, 215.385, 0, delta_1]
+      - [641.345, 315.118, 0, delta_3]
+      - [672.617, 381.683, 0, ""]
+      - [704.39, 381.683, 0, ""]
+      - [268.148, 273.834, 0, kabam_1, {is_charger: [4, true], is_parking_spot: [4, true]}]
+      - [316.528, 273.834, 0, kabam_2]
+      - [708.467, 419.064, 0, pana_door_test_end]
+      - [667.871, 419.187, 0, ""]
+      - [1214.632, 39.528, 0, mir_end]
 lifts:
   A:
     depth: 1
@@ -166,7 +216,7 @@ lifts:
     plugins: true
     reference_floor_name: L1
     width: 1
-    x: 91.916
+    x: 86
     y: 101.41
     yaw: 0
   B:
@@ -187,7 +237,7 @@ lifts:
     plugins: true
     reference_floor_name: L1
     width: 1
-    x: 91.916
+    x: 86
     y: 67.279
     yaw: 0
 name: galen
