--- a/rmf-deployment/charts/rmf-core-modules/templates/config/building-configmap.yaml
+++ b/rmf-deployment/charts/rmf-core-modules/templates/config/building-configmap.yaml
@@ -6,3 +6,7 @@ metadata:
 data:
   {{.Values.global.RMF_BUILDING_MAP}}: |-
 {{ .Files.Get "galen.building.yaml" | indent 4}}
+  lionsbot.building.yaml: |-
+{{ .Files.Get "lionsbot.building.yaml" | indent 4}}
+  medinno.building.yaml: |-
+{{ .Files.Get "medinno.building.yaml" | indent 4}}
