--- a/rmf-deployment/charts/rmf-core-modules/templates/fleets/delta.yaml
+++ b/rmf-deployment/charts/rmf-core-modules/templates/fleets/delta.yaml
@@ -1,118 +1,128 @@
-#---
-#apiVersion: v1
-#kind: Pod
-#namespace: 
-#metadata:
-#  name: rmf-tinyrobot-fleet-adapter
-#spec:
-#  restartPolicy: Always
-#  hostNetwork: true
-#  containers:
-#    - name: rmf-tinyrobot-fleet-adapter
-#      image: {{ .Values.registryUrl }}/rmf_deployment_template/rmf-fleet-adapter
-#      imagePullPolicy: Always
-#      env:
-#        - name: RMF_USE_SIM_TIME
-#          value: {{ .Values.global.RMF_USE_SIM_TIME | quote }}
-#        - name: CYCLONEDDS_URI
-#          value: {{ .Values.global.CYCLONEDDS_URI | quote }}
-#        - name: ROS_DOMAIN_ID
-#          value: {{ .Values.global.ROS_DOMAIN_ID | quote }}
-#        - name: RMW_IMPLEMENTATION
-#          value: {{ .Values.global.RMW_IMPLEMENTATION | quote }}
-#        - name: RMF_FLEET_ADAPTER_CONTROL_TYPE
-#          value: "full_control"
-#        - name: RMF_FLEET_ADAPTER_FLEET_NAME
-#          value: "tinyRobot"
-#        - name: RMF_FLEET_ADAPTER_NAV_GRAPH_FILE
-#          value: "/opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/airport_terminal/nav_graphs/2.yaml"
-#        - name: RMF_FLEET_ADAPTER_LINEAR_VELOCITY
-#          value: "0.5"
-#        - name: RMF_FLEET_ADAPTER_ANGULAR_VELOCITY
-#          value: "0.6"
-#        - name: RMF_FLEET_ADAPTER_LINEAR_ACCELERATION
-#          value: "0.75"
-#        - name: RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION
-#          value: "0.6"
-#        - name: RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS
-#          value: "0.3"
-#        - name: RMF_FLEET_ADAPTER_VICINITY_RADIUS
-#          value: "1.0"
-#        - name: RMF_FLEET_ADAPTER_DELAY_THRESHOLD
-#          value: "15.0"
-#        - name: RMF_FLEET_ADAPTER_RETRY_WAIT
-#          value: "10.0"
-#        - name: RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT
-#          value: "60.0"
-#        - name: RMF_FLEET_ADAPTER_PERFORM_DELIVERIES
-#          value: "true"
-#        - name: RMF_FLEET_ADAPTER_PERFORM_LOOP
-#          value: "true"
-#        - name: RMF_FLEET_ADAPTER_PERFORM_CLEANING
-#          value: "true"
-#        - name: RMF_FLEET_ADAPTER_BATTERY_VOLTAGE
-#          value: "12.0"
-#        - name: RMF_FLEET_ADAPTER_BATTERY_CAPACITY
-#          value: "24.0"
-#        - name: RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT
-#          value: "5.0"
-#        - name: RMF_FLEET_ADAPTER_MASS
-#          value: "20.0"
-#        - name: RMF_FLEET_ADAPTER_INERTIA
-#          value: "10.0"
-#        - name: RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT
-#          value: "0.22"
-#        - name: RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN
-#          value: "20.0"
-#        - name: RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN
-#          value: "0.0"
-#        - name: RMF_FLEET_ADAPTER_DRAIN_BATTERY
-#          value: "true"
-#        - name: RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD
-#          value: "0.1"
-#      volumeMounts:
-#        - mountPath: /etc/cyclonedds
-#          name: cyclonedds-configmap
-#  volumes:
-#    - name: cyclonedds-configmap
-#      configMap:
-#        name: cyclonedds-configmap
-#
-#---
-#apiVersion: v1
-#kind: Pod
-#metadata:
-#  name: rmf-tinyrobot-robot-state-aggregator
-#spec:
-#  restartPolicy: Always
-#  hostNetwork: true
-#  containers:
-#    - name: rmf-robot-state-aggregator
-#      image: {{ .Values.registryUrl }}/rmf_deployment_template/rmf-robot-state-aggregator
-#      imagePullPolicy: Always
-#      env:
-#        - name: RMF_USE_SIM_TIME
-#          value: {{ .Values.global.RMF_USE_SIM_TIME | quote }}
-#        - name: CYCLONEDDS_URI
-#          value: {{ .Values.global.CYCLONEDDS_URI | quote }}
-#        - name: ROS_DOMAIN_ID
-#          value: {{ .Values.global.ROS_DOMAIN_ID | quote }}
-#        - name: RMW_IMPLEMENTATION
-#          value: {{ .Values.global.RMW_IMPLEMENTATION | quote }}
-#        - name: RMF_ROBOT_STATE_AGGREGATOR_FLEET_NAME
-#          value: "tinyRobot"
-#        - name: RMF_ROBOT_STATE_AGGREGATOR_ROBOT_PREFIX
-#          value: "tinyRobot"
-#        - name: RMF_ROBOT_STATE_AGGREGATOR_ROBOT_PREFIX
-#          value: "tinyRobot"
-#        - name: RMF_FAILOVER_MODE
-#          value: "tinyRobot"
-#          value: {{ .Values.global.RMF_FAILOVER_MODE | quote }}
-#      volumeMounts:
-#        - mountPath: /etc/cyclonedds
-#          name: cyclonedds-configmap
-#  volumes:
-#    - name: cyclonedds-configmap
-#      configMap:
-#        name: cyclonedds-configmap
-#        optional: true
+---
+apiVersion: v1
+kind: Pod
+namespace: 
+metadata:
+ name: delta-fleet-adapter
+spec:
+ restartPolicy: Always
+ hostNetwork: true
+ containers:
+   - name: delta-fleet-adapter
+     image: {{ .Values.registryUrl }}/rmf-deployment/rmf-fleet-adapter
+     imagePullPolicy: Always
+     env:
+       - name: RMF_USE_SIM_TIME
+         value: {{ .Values.global.RMF_USE_SIM_TIME | quote }}
+       - name: {{ .Values.global.DDS_ENV | quote }}
+         value: {{ .Values.global.DDS_CONFIG | quote }}
+       - name: ROS_DOMAIN_ID
+         value: {{ .Values.global.ROS_DOMAIN_ID | quote }}
+       - name: RMW_IMPLEMENTATION
+         value: {{ .Values.global.RMW_IMPLEMENTATION | quote }}
+       - name: RMF_FLEET_ADAPTER_CONTROL_TYPE
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_CONTROL_TYPE | quote }}
+       - name: RMF_FLEET_ADAPTER_FLEET_NAME
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_FLEET_NAME | quote }}
+       - name: RMF_FLEET_ADAPTER_NAV_GRAPH_FILE
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_NAV_GRAPH_FILE | quote }}
+       - name: RMF_FLEET_ADAPTER_LINEAR_VELOCITY
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_LINEAR_VELOCITY | quote }}
+       - name: RMF_FLEET_ADAPTER_ANGULAR_VELOCITY
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_ANGULAR_VELOCITY | quote }}
+       - name: RMF_FLEET_ADAPTER_LINEAR_ACCELERATION
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_LINEAR_ACCELERATION | quote }}
+       - name: RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_ANGULAR_ACCELERATION | quote }}
+       - name: RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_FOOTPRINT_RADIUS | quote }}
+       - name: RMF_FLEET_ADAPTER_VICINITY_RADIUS
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_VICINITY_RADIUS  | quote }}
+       - name: RMF_FLEET_ADAPTER_DELAY_THRESHOLD
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_DELAY_THRESHOLD  | quote }}
+       - name: RMF_FLEET_ADAPTER_RETRY_WAIT
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_RETRY_WAIT  | quote }}
+       - name: RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_DISCOVERY_TIMEOUT | quote }}
+       - name: RMF_FLEET_ADAPTER_PERFORM_DELIVERIES
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_PERFORM_DELIVERIES | quote }}
+       - name: RMF_FLEET_ADAPTER_PERFORM_LOOP
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_PERFORM_LOOP | quote }}
+       - name: RMF_FLEET_ADAPTER_PERFORM_CLEANING
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_PERFORM_CLEANING | quote }}
+       - name: RMF_FLEET_ADAPTER_BATTERY_VOLTAGE
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_BATTERY_VOLTAGE | quote  }}
+       - name: RMF_FLEET_ADAPTER_BATTERY_CAPACITY
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_BATTERY_CAPACITY | quote }}
+       - name: RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_BATTERY_CHARGING_CURRENT | quote }}
+       - name: RMF_FLEET_ADAPTER_MASS
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_MASS | quote }}
+       - name: RMF_FLEET_ADAPTER_INERTIA
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_INERTIA | quote }}
+       - name: RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_FRICTION_COEFFICIENT | quote }}
+       - name: RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_AMBIENT_POWER_DRAIN  | quote }}
+       - name: RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_TOOL_POWER_DRAIN  | quote }}
+       - name: RMF_FLEET_ADAPTER_DRAIN_BATTERY
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_DRAIN_BATTERY | quote }}
+       - name: RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_RECHARGE_THRESHOLD | quote }}
+       - name: RMF_FLEET_ADAPTER_REVERSIBLE
+         value: {{ .Values.delta.RMF_FLEET_ADAPTER_REVERSIBLE | quote }}
+     volumeMounts:
+       - mountPath: /etc/cyclonedds
+         name: cyclonedds-configmap
+       - mountPath: /opt/rmf/install/rmf_demos_maps/share/rmf_demos_maps/maps/office/nav_graphs
+         name: nav-graph-configmap
+ volumes:
+   - name: cyclonedds-configmap
+     configMap:
+       name: cyclonedds-configmap
+   - name: nav-graph-configmap
+     configMap:
+       name: nav-graph-configmap
+
+---
+apiVersion: v1
+kind: Pod
+metadata:
+ name: delta-free-fleet-server
+spec:
+ restartPolicy: Always
+ hostNetwork: true
+ containers:
+   - name: delta-free-fleet-server
+     image: {{ .Values.registryUrl }}/rmf-deployment/rmf-free-fleet-server
+     imagePullPolicy: Always
+     env:
+       - name: {{ .Values.global.DDS_ENV | quote }}
+         value: {{ .Values.global.DDS_CONFIG | quote }}
+       - name: ROS_DOMAIN_ID
+         value: {{ .Values.global.ROS_DOMAIN_ID | quote }}
+       - name: RMW_IMPLEMENTATION
+         value: {{ .Values.global.RMW_IMPLEMENTATION | quote }}
+       - name: RMF_FREE_FLEET_SERVER_FLEET_NAME
+         value: {{ .Values.delta.RMF_FREE_FLEET_SERVER_FLEET_NAME | quote }}
+       - name: RMF_FREE_FLEET_SERVER_TRANSLATION_X
+         value: {{ .Values.delta.RMF_FREE_FLEET_SERVER_TRANSLATION_X | quote }}
+       - name: RMF_FREE_FLEET_SERVER_TRANSLATION_Y
+         value: {{ .Values.delta.RMF_FREE_FLEET_SERVER_TRANSLATION_Y | quote }}
+       - name: RMF_FREE_FLEET_SERVER_ROTATION
+         value: {{ .Values.delta.RMF_FREE_FLEET_SERVER_ROTATION | quote }}
+       - name: RMF_FREE_FLEET_SERVER_SCALE
+         value: {{ .Values.delta.RMF_FREE_FLEET_SERVER_SCALE | quote }}
+       - name: RMF_FREE_FLEET_SERVER_DDS_DOMAIN
+         value: {{ .Values.delta.RMF_FREE_FLEET_SERVER_DDS_DOMAIN | quote }}
+       - name: node_name
+         value: {{ .Values.delta.node_name | quote }}
+     volumeMounts:
+       - mountPath: /etc/cyclonedds
+         name: cyclonedds-configmap
+ volumes:
+   - name: cyclonedds-configmap
+     configMap:
+       name: cyclonedds-configmap
+       optional: true
